--- a/data/education.yaml
+++ b/data/education.yaml
@@ -1,9 +1,9 @@
-- name: "Systeemtherapeutisch werker"
+- name: "Systeemtherapeutisch werker (post-HBO)"
   university: "de Jeugdzorg Academie"
   more: "Technisch theoretische cursus" # Optional field, if you want to add a non-standard line.
   date: "Maart 2021 - april 2022"
 
-- name: "GGZ Agoog"
+- name: "GGZ Agoog (post-HBO)"
   university: "RINO Utrecht"
   date: "2012 - 2013"
   
