--- a/data/features.yaml
+++ b/data/features.yaml
@@ -5,10 +5,10 @@ about:
   email: info@stijnbiemans.nl
   links:
     - title: /in/stijnbiemans
-      url: https://tr.linkedin.com/in/mertbakir
+      url: https://nl.linkedin.com/in/stijnbiemans
       icon: fab fa-linkedin
     - title: stijnbiemans
-      url: https://github.com/mertbakir
+      url: https://github.com/iroQuai
       icon: fab fa-github
   details: |
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ornare sollicitudin fringilla.
