--- a/data/experience.yaml
+++ b/data/experience.yaml
@@ -29,5 +29,5 @@
 - company: STN Projecten
   roles:
     - role: Eigenaar
-      details: "Workshops diabolo, organisatie van evenementen, begeleiding, etc. kan evt ook onder "projecten" net als Buurland"
+      details: "Workshops diabolo, organisatie van evenementen, begeleiding, etc. kan evt ook onder projecten net als Buurland"
       date: "Sept 2008 - Sept 2013"
