--- a/data/projects.yaml
+++ b/data/projects.yaml
@@ -1,17 +1,17 @@
 projects:
-- title: "Simulated Annealing for Traveling Salesman Problem"
-  subtitle: "Some University"
+- title: "STN Projecten"
+  subtitle: "Begeleiding, organisatie, workshops"
   date: "2016"
   details: |
-    Lorem ipsum dolor sit amet
+    Sinds september 2008 ben ik een eenmanszaak onder de naam "STN Projecten". Onder deze naam voer ik mijn freelance projecten uit. Deze projecten zijn gevarieerd, maar kunnen globaal gezien onderverdeeld worden in 1. het begeleiden van groepen (voornamelijk jongeren), 2. het bieden van workshops diabolo, 3.  het organiseren van evenementen en festivals
 
-- title: "Resume - A4"
-  subtitle: "mertbakir.gitlab.io/resume"
-  link: "https://gitlab.com/mertbakir/resume-a4"
-  date: "2020"
+- title: "Buurland Utrecht"
+  subtitle: "Gemoedelijk wonen in Hartje Utrecht"
+  link: "https://www.buurlandutrecht.nl"
+  date: "2010 - 2015"
   details: |
-    Bring CI/CD to your resume using YAML and Git."
+    Actieve rol in opzetten en onderhouden van buurtgemeenschap Buurland Utrecht, inclusief diverse sociaal-maatschappelijke projecten (anti-inbraakborrel, opruimdagen) en jaarlijkse buurtfestival"
   links:
-  - title: Available in GitLab
-    url: https://gitlab.com/mertbakir/resume-a4
-    icon: fab fa-gitlab
+  - title: zie website
+    url: http://www.buurlandutrecht.nl
+    icon: fab fa-globe
