--- a/data/projects.yaml
+++ b/data/projects.yaml
@@ -1,7 +1,7 @@
 projects:
 - title: "STN Projecten"
   subtitle: "Begeleiding, organisatie, workshops"
-  date: "2016"
+  date: "2008 - 2013"
   details: |
     Sinds september 2008 ben ik een eenmanszaak onder de naam "STN Projecten". Onder deze naam voer ik mijn freelance projecten uit. Deze projecten zijn gevarieerd, maar kunnen globaal gezien onderverdeeld worden in 1. het begeleiden van groepen (voornamelijk jongeren), 2. het bieden van workshops diabolo, 3.  het organiseren van evenementen en festivals
 
@@ -11,7 +11,7 @@ projects:
   date: "2010 - 2015"
   details: |
     Actieve rol in opzetten en onderhouden van buurtgemeenschap Buurland Utrecht, inclusief diverse sociaal-maatschappelijke projecten (anti-inbraakborrel, opruimdagen) en jaarlijkse buurtfestival"
-  links:
-  - title: zie website
-    url: http://www.buurlandutrecht.nl
-    icon: fab fa-globe
+  #links:
+  #- title: zie website
+  #  url: http://www.buurlandutrecht.nl
+  #  icon: fab fa-globe
