--- a/data/projects.yaml
+++ b/data/projects.yaml
@@ -20,8 +20,4 @@ links:
   link: "https://www.buurlandutrecht.nl"
   date: "2010 - 2015"
   details: |
-    Actieve rol in opzetten en onderhouden van buurtgemeenschap Buurland Utrecht, inclusief diverse sociaal-maatschappelijke projecten (anti-inbraakborrel, opruimdagen) en jaarlijkse buurtfestival"
-  #links:
-  #- title: zie website
-  #  url: http://www.buurlandutrecht.nl
-  #  icon: fab fa-globe
+    Actieve rol in opzetten en onderhouden van buurtgemeenschap Buurland Utrecht, inclusief diverse sociaal-maatschappelijke projecten (anti-inbraakborrel, opruimdagen) en jaarlijkse buurtfestival
