--- a/data/projects.yaml
+++ b/data/projects.yaml
@@ -5,13 +5,13 @@ projects:
   details: |
     In de periode 2008 - 2013 had ik een eenmanszaak onder de naam "STN Projecten", waaronder ik diverse freelance projecten uitvoerde. Deze projecten waren gevarieerd, maar kunnen globaal gezien onderverdeeld worden in 
 links:
-  - title: Het begeleiden van groepen (voornamelijk jongeren)
+  - title: "Het begeleiden van groepen (voornamelijk jongeren)"
     url: http://www.stijnbiemans.nl
     icon: fab fa-people-group
-  - title: het bieden van workshops diabolo, jongleren en vuurspuwen
+  - title: "het bieden van workshops diabolo, jongleren en vuurspuwen"
     url: http://www.diaboloworkshop.nl 
     icon: fab fa-person-dots-from-line
-  - title: het organiseren van evenementen en festivals
+  - title: "het organiseren van evenementen en festivals"
     url: http://www.buurlandutrecht.nl/zwemfest/
     icon: fab fa-face-party
 
