--- a/data/projects.yaml
+++ b/data/projects.yaml
@@ -3,11 +3,11 @@ projects:
   subtitle: "Begeleiding, organisatie, workshops"
   date: "2008 - 2013"
   details: |
-    In de periode 2008 - 2013 had ik een eenmanszaak onder de naam "STN Projecten", waaronder ik diverse freelance projecten uitvoerde. Deze projecten waren gevarieerd, maar kunnen globaal gezien onderverdeeld worden in 
+    Diverse freelance projecten onder de naam "STN Projecten". Deze projecten waren gevarieerd, maar kunnen globaal gezien onderverdeeld worden in 
   links:
   - title: "Het begeleiden van groepen (voornamelijk jongeren)"
     url: http://www.stijnbiemans.nl
-    icon: fab fa-people-group
+    icon: "fab fa-people-group"
   - title: "het bieden van workshops diabolo, jongleren en vuurspuwen"
     url: http://www.diaboloworkshop.nl 
     icon: fab fa-person-dots-from-line
