--- a/data/education.yaml
+++ b/data/education.yaml
@@ -1,13 +1,16 @@
 - name: "Systeemtherapeutisch werker (post-HBO)"
   university: "de Jeugdzorg Academie"
   more: "Technisch theoretische cursus" # Optional field, if you want to add a non-standard line.
-  date: "Maart 2021 - april 2022"
-
+  date: "Maart 2021 - heden"
+  gpa: "diploma in april '22"
+  
 - name: "GGZ Agoog (post-HBO)"
   university: "RINO Utrecht"
   date: "2012 - 2013"
+  gpa: "diploma behaald"
   
 - name: "Social Work (HBO)"
   more: "Cultureel Maatschappelijke Vorming" # Optional field, if you want to add a non-standard line.
   university: "Hogeschool de Horst"
   date: "2002 - 2009"
+  gpa: "diploma behaald"
