--- a/data/experience.yaml
+++ b/data/experience.yaml
@@ -1,7 +1,7 @@
 - company: Fivoor
   roles:
-    - role: Ambulant Behandelaar @ ACT Jeugd
-      details: "Outreatchende bemoeizorg voor jongeren 13-23jr. in rol van GGZ Agoog, 3jr als teammanager en nu focus op Systeemtherapeutisch werk."
+    - role: GGZ Agoog @ ACT Jeugd
+      details: "Outreatchende bemoeizorg voor jongeren 13-23jr. in rol van GGZ Agoog, 2jr als teammanager en nu focus op Systeemtherapeutisch werk."
       date: "nov '17 -  heden"
     - role: Sociotherapeut @ Wier Kliniek Open
       details: "Open behandelsetting voor SGLVG(+) in Den Dolder"
