--- a/config.yaml
+++ b/config.yaml
@@ -56,6 +56,7 @@ params:
     links: false
   side:
     - feature: languages
+      tiele: Talen
     - feature: skills
       widget: word-list
       style: compact # list, compact, title-list
