--- a/data/experience.yaml
+++ b/data/experience.yaml
@@ -4,7 +4,7 @@
       details: "Outreatchende bemoeizorg voor jongeren 13-23jr. in rol van GGZ Agoog, 2jr als teammanager en nu focus op Systeemtherapeutisch werk."
       date: "nov '17 -  heden"
     - role: Sociotherapeut @ Wier Kliniek Open
-      details: "Open behandelsetting voor SGLVG(+) in Den Dolder"
+      details: "Wier is één van de vier erkende SGLVG behandelcentra in Nederland voor observatie, diagnostiek en behandeling van mensen met een lichte verstandelijke beperking en complexe problematiek. Ik heb hier veel geleerd over observatie, diagnostiek, behandeling en bejegening van deze bijzondere en veelzijdige doelgroep."
       date: "jan '14 -  okt '17"
     - role: Sociotherapeut @ Barentsz 
       details: "Gespecialiseerd centrum voor orthopsychiatrie in Den Dolder. Barentsz behandelde jongeren van 15 tot 21 jaar met ernstige gedragsproblemen in combinatie met andere psychiatrische stoornissen. Begin '14 gesloten."
@@ -13,8 +13,7 @@
 - company: de Vrolijkheid
   roles: 
     - role: Centrumcoördinator AZC Utrecht en Leersum
-      details: "AZC Utrecht en Leersum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ornare sollicitudin fringilla.
-              Aenean nec volutpat arcu. Maecenas quis tempus risus. "
+      details: "Als centrumcoördinator in AZC Utrecht organiseerde en begeleidde ik (samen met ruim 20 vrijwilligers) wekelijkse activiteiten voor meer dan 70 kinderen tussen 4 en 14 jaar. Daarnaast initieerde ik diverse projecten voor de meer dan 60 jongeren tussen 15 en 25 jaar uit AZC's Utrecht en Leersum. In deze functie heb ik veel geleerd over het werken met jongeren met diverse problemen (denk aan onverwerkt trauma, aandachtstekort, depressiviteit, agressieproblematiek, buitensluiting, taalachterstand, etc). Ik heb geleerd om deze kinderen en jongeren (waar nodig) te activeren, begeleiden, stimuleren, enthousiasmeren en/of begrenzen. Tegelijkertijd heb ik veel ervaring opgedaan met interculturele communicatie."
       date: "aug '09 - febr '11"
 
 - company: Kunstbende
