--- a/data/experience.yaml
+++ b/data/experience.yaml
@@ -13,7 +13,7 @@
 - company: de Vrolijkheid
   roles: 
     - role: Centrumcoördinator AZC Utrecht en Leersum
-      details: "Als centrumcoördinator in AZC Utrecht organiseerde en begeleidde ik (samen met ruim 20 vrijwilligers) wekelijkse activiteiten voor meer dan 70 kinderen tussen 4 en 14 jaar. Daarnaast initieerde ik diverse projecten voor de meer dan 60 jongeren tussen 15 en 25 jaar uit AZC's Utrecht en Leersum. In deze functie heb ik veel geleerd over het werken met jongeren met diverse problemen (denk aan onverwerkt trauma, aandachtstekort, depressiviteit, agressieproblematiek, buitensluiting, taalachterstand, etc). Ik heb geleerd om deze kinderen en jongeren (waar nodig) te activeren, begeleiden, stimuleren, enthousiasmeren en/of begrenzen. Tegelijkertijd heb ik veel ervaring opgedaan met interculturele communicatie."
+      details: "Als centrumcoördinator in AZC Utrecht organiseerde en begeleidde ik (samen met ruim 20 vrijwilligers) wekelijkse activiteiten voor meer dan 70 kinderen tussen 4 en 14 jaar. Daarnaast initieerde ik diverse projecten voor de meer dan 60 jongeren tussen 15 en 25 jaar uit AZC's Utrecht en Leersum."
       date: "aug '09 - febr '11"
 
 - company: Kunstbende
