--- a/data/features.yaml
+++ b/data/features.yaml
@@ -11,10 +11,7 @@ about:
       url: https://github.com/iroQuai
       icon: fab fa-github
   details: |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ornare sollicitudin fringilla.
-    Aenean nec volutpat arcu. Maecenas quis tempus risus. Curabitur condimentum ligula in erat pharetra porta.
-
-    Nam suscipit nisi a bibendum lacinia.
+In de afgelopen jaren heb ik werkervaring opgedaan op diverse plekken. In al deze ervaringen spelen groepsdynamische, sociaal-maatschappelijke, organisatorische en creatieve elementen een rol. In deze C.V. omschrijf ik op beknopte wijze mijn meest relevante ervaringen. 
 
 
 skills:
