--- a/data/experience.yaml
+++ b/data/experience.yaml
@@ -6,14 +6,14 @@
     - role: Sociotherapeut @ Wier Kliniek Open
       details: "Wier is één van de vier erkende SGLVG behandelcentra in Nederland voor observatie, diagnostiek en behandeling van mensen met een lichte verstandelijke beperking en complexe problematiek. Ik heb hier veel geleerd over observatie, diagnostiek, behandeling en bejegening van deze bijzondere en veelzijdige doelgroep."
       date: "jan '14 -  okt '17"
-    - role: Sociotherapeut @ Barentsz 
+    - role: Sociotherapeut @ Barentsz kliniek
       details: "Gespecialiseerd centrum voor orthopsychiatrie in Den Dolder. Barentsz behandelde jongeren van 15 tot 21 jaar met ernstige gedragsproblemen in combinatie met andere psychiatrische stoornissen. Begin '14 gesloten."
       date: "jan '13 -  mrt '14"
 
-- company: de Vrolijkheid
+- company: Nationale stichting ter bevordering van Vrolijkheid
   roles: 
     - role: Centrumcoördinator AZC Utrecht en Leersum
-      details: "Als centrumcoördinator in AZC Utrecht organiseerde en begeleidde ik (samen met ruim 20 vrijwilligers) wekelijkse activiteiten voor meer dan 70 kinderen tussen 4 en 14 jaar. Daarnaast initieerde ik diverse projecten voor de meer dan 60 jongeren tussen 15 en 25 jaar uit AZC's Utrecht en Leersum."
+      details: "Als centrumcoördinator in diverse asielzoekerscentra organiseerde en begeleidde ik (samen met ruim 20 vrijwilligers) wekelijkse activiteiten voor meer dan 70 kinderen tussen 4 en 14 jaar. Daarnaast initieerde ik diverse projecten voor de meer dan 60 jongeren tussen 15 en 25 jaar uit AZC's Utrecht en Leersum."
       date: "aug '09 - febr '11"
 
 - company: Kunstbende
