--- a/data/features.yaml
+++ b/data/features.yaml
@@ -17,8 +17,8 @@ about:
 skills:
   - groupName: Herstelgerichte zorg
     list:
-      - Grafana - Kibana - PowerBI
-      - InfluxDB - TICK Stack
+      - yucel - persoonlijke diagnostiek
+      - Presentietheorie - SRH 
 
   - groupName: systemisch werken
     list:
