--- a/data/education.yaml
+++ b/data/education.yaml
@@ -1,14 +1,14 @@
-- name: "Systeemtherapeutisch werker (post-HBO)"
-  university: "de Jeugdzorg Academie"
-  more: "Technisch theoretische cursus" # Optional field, if you want to add a non-standard line.
-  date: "Maart 2021 - heden"
+- name: "Systeemtherapeutisch Werker"
+  university: "de Jeugdzorg Academie, Utrecht"
+  # more: "Technisch theoretische cursus" # Optional field, if you want to add a non-standard line.
+  date: "2021 - 2022"
   
-- name: "GGZ Agoog (post-HBO)"
-  university: "RINO Utrecht"
+- name: "GGZ Agoog"
+  university: "RINO Groep Utrecht"
   date: "2012 - 2013"
   
-- name: "Social Work (HBO)"
-  more: "Cultureel Maatschappelijke Vorming" # Optional field, if you want to add a non-standard line.
-  university: "Hogeschool de Horst"
+- name: "HBO Social Work (CMV)"
+  # more: "Cultureel Maatschappelijke Vorming" # Optional field, if you want to add a non-standard line.
+  university: "de Horst, Driebergen"
   date: "2002 - 2009"
 
