spelfoutjes en details

--- a/data/experience.yaml
+++ b/data/experience.yaml
@@ -10,10 +10,10 @@
       details: "Identiek aan Wier, maar dan met jongeren tussen 15 en 23 jaar met psychiatrische problematiek in combinatie mer ernstige gedragsproblemen."
       date: "jan '13 -  mrt '14"
 
-- company: Nationale stichting ter bevordering van Vrolijkheid
+- company: Stichting de Vrolijkheid
   roles: 
     - role: Centrumcoördinator AZC Utrecht en Leersum
-      details: " Ontwikkelen, uitvoeren, aansturen en evalueren van creatieve en sportieve projecten voor zo'n 140 kinderen en jongeren in AZC's Utrecht en Leersum. Aannemen, aansturen en begeleiden ruim 20 vrijwilligers. Beheer financiën."
+      details: "Ontwikkelen, uitvoeren, begeleiden en evalueren van creatieve en sportieve projecten voor zo'n 140 kinderen en jongeren. Aannemen, aansturen en begeleiden ruim 20 vrijwilligers. Beheer financiën."
       date: "aug '09 - febr '11"
 
 - company: Kunstbende
