--- a/data/features.yaml
+++ b/data/features.yaml
@@ -66,7 +66,7 @@ languages:
   - name: Talen
     level: Nederlands, Engels
   - name: Registraties
-    level: SKJ, GGZ Agoog. (NVRG Volgt)
+    level: SKJ, GGZ Agoog. (NVRG Volgt in januari 2024)
   - name: Rijbewijs
     level: B, incl eigen auto
   - name: Vrije tijd
