--- a/config.yaml
+++ b/config.yaml
@@ -90,7 +90,7 @@ params:
     show: true
     credits: false
     footnote: >-
-      Deze CV is te printen op A4 papier (of op te slaan als PDF) | Laatste update op 2023-08-02.
+      Deze CV is te printen op A4 papier (of op te slaan als PDF) | Laatste update in augustus '23
     links:
       - prefix: Neem contact op via 
         title: Linkedin
