--- a/data/education.yaml
+++ b/data/education.yaml
@@ -1,4 +1,4 @@
-- name: "Systeemtherapeutisch Werk (STW)"
+- name: "Systeemtherapeutisch Werk"
   university: "de Jeugdzorg Academie, Utrecht"
   # more: "Technisch theoretische cursus" # Optional field, if you want to add a non-standard line.
   date: "2021 - 2022"
