--- a/data/features.yaml
+++ b/data/features.yaml
@@ -32,7 +32,7 @@ skills:
       - persoonlijke diagnostiek
       - presentietheorie
       
-  - groupName: Systemisch werken
+  - groupName: Systeemgerichte aanpak
     list:
     - betrekken gezin, familie en vrienden
     - samenwerken ketenpartners
