--- a/data/features.yaml
+++ b/data/features.yaml
@@ -23,6 +23,7 @@ skills:
     - maatwerk
     - steunend en structurerend
     - crisismanagement
+    - suicidaliteit
 
   - groupName: Herstel- en krachtgericht
     list:
