--- a/data/features.yaml
+++ b/data/features.yaml
@@ -23,7 +23,7 @@ skills:
     - maatwerk
     - steunend en structurerend
     - crisismanagement
-    - suicidaliteit
+    - (acute en chronische) suicidaliteit
 
   - groupName: Herstel- en krachtgericht
     list:
