--- a/data/features.yaml
+++ b/data/features.yaml
@@ -2,7 +2,7 @@ about:
   name: Stijn Biemans
   tagline: GGZ Agoog | Systeemtherapeutisch werker
   phone: "06-628708065"
-  email: stijn.biemans@gmail.com
+  email: info@stijnbiemans.nl
   links:
     - title: /in/stijnbiemans
       url: https://nl.linkedin.com/in/stijnbiemans
