--- a/data/features.yaml
+++ b/data/features.yaml
@@ -20,7 +20,6 @@ skills:
     - complexe problematiek
     - zorgmijding
     - weerstand
-    - maatwerk
     - steunend en structurerend
     - (acute en chronische) suicidaliteit
     - crisismanagement
@@ -32,11 +31,13 @@ skills:
       - yucelmethode
       - presentietheorie
       - SRH
+      - maatwerk
       
   - groupName: Systeemgerichte aanpak
     list:
     - betrekken gezin, familie en vrienden
     - samenwerken ketenpartners
+    - meervoudig partijdig
     - signaleren en veranderen ongewenste patronen
     - geweldloos verzet
     - machteloosheid en rouw bij ouders
