--- a/data/features.yaml
+++ b/data/features.yaml
@@ -8,8 +8,8 @@ about:
       url: https://nl.linkedin.com/in/stijnbiemans
       icon: fab fa-linkedin
     - title: stijnbiemans
-      url: https://github.com/iroQuai
-      icon: fab fa-github
+      url: https://www.stijnbiemans.nl
+      icon: fas fa-globe
   details: "Ik ben Stijn, 38 jaar, woonachtig in Amersfoort. Opgeleid als social worker, met specialisaties tot GGZ Agoog en Systeemtherapeutisch Werker. Zo'n twintig jaar ervaring in het werk met (kwetsbare) jongeren, en ruim tien jaar ervaring in de specialistische GGZ. Sinds 2017 werkzaam als ambulant behandelaar in een ACT Jeugd team. En op zoek naar een nieuwe uitdaging!"
 
 skills:
