--- a/data/experience.yaml
+++ b/data/experience.yaml
@@ -1,7 +1,7 @@
 - company: Fivoor
   roles:
     - role: GGZ Agoog / STW @ ACT Jeugd
-      details: "Outreachende (bemoei)zorg voor jongeren tussen 13-23 jaar met complexe problematiek volgens met model 'Assertive Community Treatment'. In de rollen van GGZ Agoog en Systeemtherapeutisch Werker ben ik verantwoordelijk voor de behandeling van zowel jongeren als gezinnen."
+      details: "Outreachende (bemoei)zorg voor jongeren tussen 13-23 jaar met complexe problematiek volgens met model 'Assertive Community Treatment'. In de rollen van GGZ Agoog en Systeemtherapeutisch Werker ben ik verantwoordelijk voor de behandeling van zowel jongeren als hun gezinnen."
       date: "nov '17 -  heden"
     - role: Sociotherapeut @ Wier Kliniek
       details: Verantwoordelijk voor het therapeutisch klimaat. Onderlinge groepsdynamiek, individuele ondersteuning van clienten in alle ontwikkelingstaken, interventies bij conflict- en crisissituaties. Observeren, rapporteren en evalueren van individuele behandeltrajecten. Crisismanagement en deëscalatie. Bieden van psycho-educatie en groepstherapie.
